--- a/src/app/core/layout/inner-pages/chats/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/chats/list-agent/list-agent.component.html
@@ -2,12 +2,12 @@
   <section class="content-header">
     <h1 *ngIf="chatMode">Chat List</h1>
     <h1 *ngIf="!chatMode">Contact List</h1>
-    <ol class="breadcrumb">
-      <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li *ngIf="chatMode"><a href="javascript:void(0)">Chats</a></li>
-      <li *ngIf="!chatMode"><a href="javascript:void(0)">Contact</a></li>
-      <li class="active"><a href="javascript:void(0)">List</a></li>
-    </ol>
+    <!--<ol class="breadcrumb">-->
+      <!--<li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>-->
+      <!--<li *ngIf="chatMode"><a href="javascript:void(0)">Chats</a></li>-->
+      <!--<li *ngIf="!chatMode"><a href="javascript:void(0)">Contact</a></li>-->
+      <!--<li class="active"><a href="javascript:void(0)">List</a></li>-->
+    <!--</ol>-->
   </section>
   <section class="content">
     <div class="row">
