--- a/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
+++ b/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
@@ -1,12 +1,12 @@
 <div class="content-wrapper">
-    <section class="content-header">
-        <h1>Departments</h1>
-        <ol class="breadcrumb">
-            <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li><a href="javascript:void(0)">Department</a></li>
-            <li class="active"><a href="javascript:void(0)">List</a></li>
-        </ol>
-    </section>
+    <!--<section class="content-header">-->
+        <!--<h1>Departments</h1>-->
+        <!--<ol class="breadcrumb">-->
+            <!--<li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>-->
+            <!--<li><a href="javascript:void(0)">Department</a></li>-->
+            <!--<li class="active"><a href="javascript:void(0)">List</a></li>-->
+        <!--</ol>-->
+    <!--</section>-->
     <section class="content">
         <div class="row">
             <div class="col-xs-12">
