--- a/src/app/core/layout/inner-pages/profile/profile.component.html
+++ b/src/app/core/layout/inner-pages/profile/profile.component.html
@@ -4,10 +4,10 @@
         <h1>
             User Profile
         </h1>
-        <ol class="breadcrumb">
-            <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">Profile</li>
-        </ol>
+        <!--<ol class="breadcrumb">-->
+            <!--<li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>-->
+            <!--<li class="active">Profile</li>-->
+        <!--</ol>-->
     </section>
 
     <!-- Main content -->
