--- a/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
+++ b/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
@@ -1,12 +1,12 @@
 <div class="content-wrapper">
-    <section class="content-header">
-        <h1><span>Widget Section</span></h1>
-        <ol class="breadcrumb">
-            <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li><a routerLink="/widget/list"> Widget</a></li>
-            <li class="active"><a  href="javascript:void(0)"> {{ editMode ? 'Edit' : 'Create' }} </a></li>
-        </ol>
-    </section>
+    <!--<section class="content-header">-->
+        <!--<h1><span>Widget Section</span></h1>-->
+        <!--<ol class="breadcrumb">-->
+            <!--<li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>-->
+            <!--<li><a routerLink="/widget/list"> Widget</a></li>-->
+            <!--<li class="active"><a  href="javascript:void(0)"> {{ editMode ? 'Edit' : 'Create' }} </a></li>-->
+        <!--</ol>-->
+    <!--</section>-->
     <section class="content">
         <div class="row">
             <div class="col-xs-12">
