--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
@@ -1,11 +1,11 @@
 <div class="content-wrapper">
     <section class="content-header">
         <h1>Live Sessions</h1>
-        <ol class="breadcrumb">
-            <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li><a href="javascript:void(0)">Live Sessions</a></li>
-            <li class="active">Chat</li>
-        </ol>
+        <!--<ol class="breadcrumb">-->
+            <!--<li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>-->
+            <!--<li><a href="javascript:void(0)">Live Sessions</a></li>-->
+            <!--<li class="active">Chat</li>-->
+        <!--</ol>-->
     </section>
     <section class="content">
         <div class="row">
