--- a/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.html
+++ b/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.html
@@ -1,12 +1,12 @@
 <div class="content-wrapper">
-  <section class="content-header">
-    <h1>Contact List</h1>
-    <ol class="breadcrumb">
-      <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li><a routerLink="/chats/list-agents-contacts">Contact</a></li>
-      <li class="active"><a href="javascript:void(0)">View</a></li>
-    </ol>
-  </section>
+  <!--<section class="content-header">-->
+    <!--<h1>Contact List</h1>-->
+    <!--<ol class="breadcrumb">-->
+      <!--<li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>-->
+      <!--<li><a routerLink="/chats/list-agents-contacts">Contact</a></li>-->
+      <!--<li class="active"><a href="javascript:void(0)">View</a></li>-->
+    <!--</ol>-->
+  <!--</section>-->
   <section class="content">
     <div class="row">
       <div class="col-xs-12">
