--- a/src/app/core/layout/inner-pages/chats/list-chat/list-chat.component.html
+++ b/src/app/core/layout/inner-pages/chats/list-chat/list-chat.component.html
@@ -1,11 +1,11 @@
 <div class="content-wrapper">
   <section class="content-header">
     <h1>Previous Chats</h1>
-    <ol class="breadcrumb">
-      <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li><a routerLink="/chats/list-agent">Chats</a></li>
-      <li class="active"><a href="javascript:void(0)">View</a></li>
-    </ol>
+    <!--<ol class="breadcrumb">-->
+      <!--<li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>-->
+      <!--<li><a routerLink="/chats/list-agent">Chats</a></li>-->
+      <!--<li class="active"><a href="javascript:void(0)">View</a></li>-->
+    <!--</ol>-->
   </section>
   <section class="content">
     <div class="row">
