--- a/src/app/core/layout/inner-pages/dashboard/dashboard.component.html
+++ b/src/app/core/layout/inner-pages/dashboard/dashboard.component.html
@@ -6,10 +6,10 @@
       Dashboard
       <small>Control panel</small>
     </h1>
-    <ol class="breadcrumb">
-      <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li class="active">Dashboard</li>
-    </ol>
+    <!--<ol class="breadcrumb">-->
+      <!--<li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>-->
+      <!--<li class="active">Dashboard</li>-->
+    <!--</ol>-->
   </section>
 
   <!-- Main content -->
