--- a/src/app/core/layout/inner-pages/chats/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/chats/list-agent/list-agent.component.html
@@ -1,7 +1,7 @@
 <div class="content-wrapper">
   <section class="content-header">
-    <h1 *ngIf="chatMode">Chat List</h1>
-    <h1 *ngIf="!chatMode">Contact List</h1>
+    <h1 *ngIf="chatMode">Chat List </h1>
+    <h1 *ngIf="!chatMode">Contact List </h1>
     <!--<ol class="breadcrumb">-->
       <!--<li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>-->
       <!--<li *ngIf="chatMode"><a href="javascript:void(0)">Chats</a></li>-->
@@ -15,7 +15,7 @@
         <div class="box">
           <div class="box-header">
             <div class="row">
-              <div class="col-sm-6"> Search : <input [(ngModel)]="term" placeholder="keyword"></div>
+              <div class="col-sm-6"> Search : <input [(ngModel)]="term" placeholder="First Name,Last Name,Phone"></div>
             </div>
           </div>
           <!-- /.box-header -->
