--- a/src/app/core/core.component.html
+++ b/src/app/core/core.component.html
@@ -1,5 +1,5 @@
 <router-outlet></router-outlet>
 
 <app-alert *ngIf="(alertState | async).show" [text]="(alertState | async).message" [type]="(alertState | async).type"></app-alert>
-<ng4-loading-spinner> </ng4-loading-spinner>
+<app-spinner> </app-spinner>
 
