--- a/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.css
+++ b/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.css
@@ -34,3 +34,83 @@
     margin: -27px 10px 0 0;
     cursor: pointer;
 }
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 87px;
+  height: 34px;
+}
+
+.switch input {display:none;}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 29px;
+  width: 26px;
+  left: 1px;
+  bottom: 2px;
+  background-color: white;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+  left: 32px;
+}
+
+.filterSubmit {
+  position: relative;
+  z-index: 1;
+  left: 0px;
+  top: 0px;
+}
+.input-box-toggel {
+  float: left;
+  width: calc(100% - 84px);
+}
+.input-label-toggel {
+  width: 100% !important;
+}
+
+.slider:after
+{
+  content:'OFF';
+  color: white;
+  display: block;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  top: 50%;
+  left: 70%;
+  font-size: 15px;
+  font-family: Verdana, sans-serif;
+}
+
+input:checked + .slider:after
+{
+  content:'ON';
+  left: 30% !important;
+}
+
