add droupdown and fix company v1.0

--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
@@ -51,37 +51,20 @@
                                         <div class="box-body">
                                             <div class="chat-btn">
                                                 <div *ngIf="(chatState | async).ongoing[currentChatIndex]?.status == 2">
-                                                    <button (click)="onSomeMsgAction(5)" class="btn btn-success">Resolve
-                                                        Chat
-                                                    </button>
-
-                                                    <div class="dropdown target-drop" [appDropdown]="'open'"
-                                                         [disable-hover]="false">
-                                                        <button class="btn btn-default dropdown-toggle"
-                                                                type="button" data-toggle="dropdown">
-                                                            Transfer
-                                                            <span class="caret"></span>
-                                                        </button>
+                                                    <button (click)="onSomeMsgAction(5)" class="btn btn-success">Close Chat</button>
+                                                    <!-- Droupdown -->
+                                                    <div class="dropdown target-drop" [ngClass]="openStatus ? 'open' : ''">
+                                                        <button class="btn btn-default" (click)="openDropdown()" type="button" data-toggle="dropdown">Transfer<span class="caret"></span></button>
                                                         <ul class="dropdown-menu">
-                                                            <li class="dropdown-submenu"
-                                                                *ngFor="let department of (chatState | async).agentList; let i = index;">
-                                                                <div class="dropdown" [appDropdown]="'open'"
-                                                                     [disable-hover]="false">
-                                                                    <a class="test" tabindex="-1">{{
-                                                                        department.department_name }} <span
-                                                                                class="caret"></span></a>
+                                                            <li class="dropdown-submenu" *ngFor="let department of (chatState | async).agentList; let i = index;">
+                                                                <div class="dropdown target-drop open" [appDropdown]="'open'" [disable-hover]="true">
+                                                                    <a class="test" tabindex="-1">{{ department.department_name }} <span class="caret"></span></a>
                                                                     <ul class="dropdown-menu">
-                                                                        <li><a tabindex="-1"
-                                                                               (click)="transferChatToDepartment(department.department_id)">Transfer
-                                                                            to department </a></li>
-                                                                        <li class="dropdown-submenu">
-                                                                            <a tabindex="-1">Transfer to agent </a>
+                                                                        <li><a tabindex="-1" (click)="transferChatToDepartment(department.department_id)">Transfer to department </a></li>
+                                                                        <li class="dropdown-submenu"><a tabindex="-1">Transfer to agent </a>
                                                                             <ul class="super-sub">
                                                                                 <li *ngFor="let agent of department.agent">
-                                                                                    <a tabindex="-1"
-                                                                                       (click)="transferChatToAgent(agent.agent_id)"
-                                                                                       [ngClass]="(agent.agent_id === agentId)? 'btn-disabled' : ''">
-                                                                                        {{ agent.first_name }} </a>
+                                                                                    <a tabindex="-1" (click)="transferChatToAgent(agent.agent_id)" [ngClass]="(agent.agent_id === agentId)? 'btn-disabled' : ''">{{ agent.first_name }} </a>
                                                                                 </li>
                                                                             </ul>
                                                                         </li>
@@ -90,6 +73,7 @@
                                                             </li>
                                                         </ul>
                                                     </div>
+                                                    <!-- Droupdown -->
                                                 </div>
                                                 <!-- Conversations are loaded here -->
                                                 <!--<div class="direct-chat-messages" #scrollChat [scrollTop]="scrollChat.scrollHeight" [scrollTop]="scrollChat.scrollTo(0, 1000000)">-->
