change buy button lebel in widget create

--- a/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
+++ b/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
@@ -307,7 +307,7 @@
                             <!--Buy number buttons -->
                             <div class="col-md-2" *ngIf="!editMode">
                               <label class="control-label"> &nbsp; </label>
-                              <button type="button" class="form-control btn btn-success" (click)="buyNumber(areaCode.value,contains.value)"><i *ngIf ="buyButtonLoader" class="fa fa-spinner fa-spin"> </i> Buy Number</button>
+                              <button type="button" class="form-control btn btn-success" (click)="buyNumber(areaCode.value,contains.value)"><i *ngIf ="buyButtonLoader" class="fa fa-spinner fa-spin"> </i> Get Number</button>
                             </div>
                           </div>
                           <div class="row" *ngIf="numberError && !isBuyNumber">
