--- a/src/app/core/layout/inner-pages/widget/list-widget/list-widget.component.html
+++ b/src/app/core/layout/inner-pages/widget/list-widget/list-widget.component.html
@@ -78,6 +78,7 @@
                                                         <li><a (click)="onEditWidget(item.id)"><i class="fa fa-pencil"
                                                                                                   aria-hidden="true"></i>Edit</a>
                                                         </li>
+                                                      <li> <a (click)="DeleteWidget(item.id)"><i class="fa fa-times" aria-hidden="true"></i>Delete</a> </li>
                                                     </ul>
                                                 </div>
                                             </td>
