--- a/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
@@ -77,6 +77,7 @@
                                                                      aria-hidden="true"></i>Edit</a></li>
                             <li *ngIf="item.is_block == '1'"> <a (click)="blockUser(item.id)"><i class="fa fa-lock" aria-hidden="true"></i>Block</a> </li>
                             <li *ngIf="item.is_block != '1'"> <a (click)="UnblockUser(item.id)"><i class="fa fa-unlock" aria-hidden="true"></i>Unblock</a> </li>
+                            <li> <a (click)="DeleteAgent(item.id)"><i class="fa fa-times" aria-hidden="true"></i>Delete</a> </li>
                           </ul>
                         </div>
                       </td>
